updated image source

--- a/thank-you.html
+++ b/thank-you.html
@@ -19,11 +19,7 @@
         <p class="cvc">000</p>
       </div>
       <div class="front">
-        <img
-          class="logo"
-          src="./interactive-card-details-form-main/images/card-logo.svg"
-          alt="card-logo"
-        />
+        <img class="logo" src="./images/card-logo.svg" alt="card-logo" />
 
         <p class="card-no">0000 0000 0000 0000</p>
         <p class="name">Jane Appleseed</p>
@@ -32,7 +28,7 @@
       <div class="bg"></div>
       <div class="thank-you">
         <img
-          src="./interactive-card-details-form-main/images/icon-complete.svg"
+          src="./images/icon-complete.svg"
           alt="a check sign"
           class="check"
         />
