--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         <p class="cvc">000</p>
       </div>
       <div class="front">
-        <img
-          class="logo"
-          src="./interactive-card-details-form-main/images/card-logo.svg"
-          alt="card-logo"
-        />
+        <img class="logo" src="./images/card-logo.svg" alt="card-logo" />
 
         <p class="card-no">0000 0000 0000 0000</p>
         <p class="name">Jane Appleseed</p>
