--- a/thank-you.html
+++ b/thank-you.html
@@ -16,7 +16,7 @@
       href="./images/favicon-32x32.png"
     />
     <script src="./thank-you.js" defer></script>
-    <link rel="stylesheet" href="./styles-copy.css" />
+    <link rel="stylesheet" href="thank-you.css" />
     <title>Frontend Mentor | Interactive cardBancar details form</title>
   </head>
   <body onload="getText()">
