fixed regex for HTML input validation

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 required
                 type="tel"
                 maxlength="2"
-                pattern="\d{2}"
+                pattern="\b([1-9]|1[0-2])\b"
                 name="expiry"
                 id="month"
                 placeholder="MM"
@@ -85,7 +85,7 @@
                 required
                 type="tel"
                 maxlength="2"
-                pattern="\d{2}"
+                pattern="\b(2[3-9]|3[0-9])\b"
                 name="expiry"
                 id="year"
                 placeholder="YY"
