--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <main>
+      <h1>Card Input Page</h1>
       <div class="back">
         <p class="back__cvc">000</p>
       </div>
@@ -42,22 +43,19 @@
           <input
             type="text"
             name="name"
-            required
             id="name"
             pattern="^[a-z .'-]+$"
             maxlength="18"
             placeholder="e.g. Jane Appleseed"
+            autocomplete="email"
           />
           <span class="error__nume">Wrong format</span>
         </div>
         <div class="container">
           <label for="card-no" class="form__label">card number</label>
 
-          <!-- add required attribute -->
-
           <input
             type="tel"
-            required
             name="card-no"
             pattern="^(\d{4}\s\d{4}\s\d{4}\s\d{4})+$"
             id="card-no"
@@ -72,7 +70,6 @@
 
             <div class="inline__expiry__inline">
               <input
-                required
                 type="tel"
                 maxlength="2"
                 pattern="\b([1-9]|1[0-2])\b"
@@ -82,7 +79,6 @@
               />
 
               <input
-                required
                 type="tel"
                 maxlength="2"
                 pattern="\b(2[3-9]|3[0-9])\b"
@@ -102,7 +98,6 @@
               name="cvc"
               pattern="\d{3}"
               id="cvc"
-              required
               maxlength="3"
               placeholder="e.g. 123"
             />
