--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <main>
-      <h1>Card Input Page</h1>
+      <h1 class="sr-only">Card Input Page</h1>
       <div class="back">
         <p class="back__cvc">000</p>
       </div>
